  FileMaker Server.
- Add a mobile sample application to Samples/Sample_Mobile directory.
- [INFO] FileMaker Server 11 has been deprecated. In the near future, INTER-Mediator will require
  FileMaker Server 12 or later if using FileMaker Server.
- [SECURITY FIX] Fix the possibility of an open redirection vulnerability in the file upload component.
- [SECURITY FIX] Update FileUploader.php to prevent the HTTP header injection in PHP's header() for 
  Internet Explorer and PHP 5.2.x/PHP 5.3.x (Fixed in PHP 5.4.38, PHP 5.5.22 and PHP 5.6.6).
- [BUG FIX] Fix detection of params.php file.
- [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
- [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
  is "enclosure post".
- [BUG FIX] Fix not to remove focus from input field on the Post Only Mode when using validation in some 
  cases.
- [BUG FIX] Definition File Editor can store the some values that are as array.
- [BUG FIX] If the "key" key wasn't supplied, the calculation goes wrong results.
- [BUG FIX] Fix buildup.sh to include "themes" directory correctly. The affected version is 5.2 only.
- [BUG FIX] When insert/delete record, it didn't affect to other contexts. #299 This issue was resolved.
- [BUG FIX] Samples/templates didn't work in case of unsupported browsers.

Ver.5.2 (August 24, 2015)
- Record Copying is supported for single record, and also with associated records for PDO.
- Authentication with an LDAP user.
- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
  Server.
- The "button-names" key in a context of definition file supports to customize the button names.
- The list aggregate function was introduced.
- Add IMLIbUI.validation() as a public method.
- INTER-Mediator-Server VM can update with just "git pull origin master" command.